# baseball-web-app

./: .gitignore  README.md  render.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: constants.py  main.py  utils.py
backend/app/models/: responses.py
backend/app/routers/: games.py  players.py  roster.py  teams.py
backend/app/services/: games_service.py  players_service.py  roster_service.py  teams_service.py
backend/tests/: conftest.py  test_constants.py  test_games.py  test_players.py  test_roster.py  test_teams.py
frontend/: angular.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.html  main.tsx  styles.css
frontend/src/app/: app.component.css  app.component.html  app.routes.ts
frontend/src/app/core/models/: mlb.models.ts
frontend/src/app/core/services/: mlb-api.service.ts
frontend/src/app/features/roster/components/: roster-page.component.css  roster-page.component.html  roster-page.component.ts
frontend/src/environments/: environment.ts
frontend/src/features/player/: PlayerPage.css  PlayerPage.test.tsx  PlayerPage.tsx
frontend/src/features/roster/: RosterPage.css  RosterPage.tsx
frontend/src/features/scores/: GameDetailPage.tsx  ScoreCard.tsx
frontend/src/models/: mlb.models.ts
frontend/src/services/: mlbApi.ts
frontend/src/tests/player/: PlayerPage.test.tsx
frontend/src/tests/scores/: GameDetailPage.test.tsx  ScoreCard.test.tsx
